Fix Helios footer spacing

--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -66,10 +66,9 @@ body {
 
 h1 h2 h3 h4 h5 h6 {
   line-height: 1.2;
-}
-
-h1 {
   margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
 }
 
 a {
